--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
     </p>
 
     <div class="social-img-row">
-      <a href="https://www.linkedin.com/in/rucha-keni" target="_blank" class="circle">
+      <a href="https://www.linkedin.com/in/rucha-keni-5182171a4" target="_blank" class="circle">
         <img src="assets/LinkedIn.png" alt="LinkedIn" />
       </a>
       <a href="mailto:kenirucha21@gmail.com" target="_blank" class="circle">
         <img src="assets/Gmail.png" alt="Gmail" />
       </a>
-      <a href="https://github.com/ruchakeni" target="_blank" class="circle">
+      <a href="https://github.com/Rkruhh" target="_blank" class="circle">
         <img src="assets/Github.jpg.webp" alt="GitHub" />
       </a>
-      <a href="https://www.instagram.com/" target="_blank" class="circle">
+      <a href="https://www.instagram.com/rucha_keni?igsh=MTZkZ2IxaDUyODk5aA%3D%3D&utm_source=qr" target="_blank" class="circle">
         <img src="assets/Insta.jpg" alt="Instagram" />
       </a>
     </div>
@@ -90,62 +90,82 @@
   <section id="skills" class="section">
     <h2 class="section-title">Technical Skills</h2>
 
-    <div class="skills-container">
-
-      <div class="skills-category">
-        <h3>Languages / Frameworks</h3>
-        <div class="skills-grid">
-          <span>Java</span><span>Python</span><span>HTML</span><span>CSS</span>
-          <span>JavaScript</span><span>Next.js</span><span>SQL</span><span>.NET</span>
+    <div class="skills-card-grid">
+      <article class="skills-card">
+        <h3 class="skills-card-title">Programming Languages &amp; Frameworks</h3>
+        <div class="skills-pill-group">
+          <span class="skill-pill">Java</span>
+          <span class="skill-pill">Python</span>
+          <span class="skill-pill">JavaScript</span>
+          <span class="skill-pill">HTML</span>
+          <span class="skill-pill">CSS</span>
+          <span class="skill-pill">Next.js</span>
+          <span class="skill-pill">.NET</span>
+          <span class="skill-pill">SQL</span>
         </div>
-      </div>
+      </article>
 
-      <div class="skills-category">
-        <h3>Data Science & AI</h3>
-        <div class="skills-grid">
-          <span>Pandas</span><span>NumPy</span><span>Scikit-learn</span>
-          <span>Power BI</span><span>Tableau</span><span>FastAPI</span><span>Vertex AI</span>
+      <article class="skills-card">
+        <h3 class="skills-card-title">AI / ML &amp; Data</h3>
+        <div class="skills-pill-group">
+          <span class="skill-pill">Pandas</span>
+          <span class="skill-pill">NumPy</span>
+          <span class="skill-pill">Scikit-learn</span>
+          <span class="skill-pill">Power BI</span>
+          <span class="skill-pill">Tableau</span>
+          <span class="skill-pill">FastAPI</span>
+          <span class="skill-pill">Vertex AI</span>
         </div>
-      </div>
+      </article>
 
-      <div class="skills-category">
-        <h3>Cloud Tools</h3>
-        <div class="skills-grid">
-          <span>Jenkins</span><span>Azure DevOps</span><span>GitHub Actions</span>
-          <span>AWS</span><span>JIRA</span><span>Confluence</span>
+      <article class="skills-card">
+        <h3 class="skills-card-title">Cloud &amp; DevOps Tools</h3>
+        <div class="skills-pill-group">
+          <span class="skill-pill">Jenkins</span>
+          <span class="skill-pill">Azure DevOps</span>
+          <span class="skill-pill">GitHub Actions</span>
+          <span class="skill-pill">AWS</span>
+          <span class="skill-pill">JIRA</span>
+          <span class="skill-pill">Confluence</span>
         </div>
-      </div>
+      </article>
 
-      <div class="skills-category">
-        <h3>Cloud & Databases</h3>
-        <div class="skills-grid">
-          <span>AWS (EC2, S3)</span><span>SQL</span><span>MongoDB</span><span>Oracle</span>
+      <article class="skills-card">
+        <h3 class="skills-card-title">Databases</h3>
+        <div class="skills-pill-group">
+          <span class="skill-pill">MongoDB</span>
+          <span class="skill-pill">Oracle</span>
+          <span class="skill-pill">PostgreSQL</span>
         </div>
-      </div>
+      </article>
 
-      <div class="skills-category">
-        <h3>Testing & Automation</h3>
-        <div class="skills-grid">
-          <span>Selenium</span><span>Appium</span><span>Cucumber</span>
-          <span>TestNG</span><span>RestAssured</span><span>Postman</span><span>JMeter</span>
+      <article class="skills-card">
+        <h3 class="skills-card-title">Testing &amp; Automation</h3>
+        <div class="skills-pill-group">
+          <span class="skill-pill">Selenium</span>
+          <span class="skill-pill">Appium</span>
+          <span class="skill-pill">Cucumber</span>
+          <span class="skill-pill">TestNG</span>
+          <span class="skill-pill">RestAssured</span>
+          <span class="skill-pill">Postman</span>
+          <span class="skill-pill">JMeter</span>
         </div>
-      </div>
+      </article>
 
-      <div class="skills-category">
-        <h3>Interpersonal & Leadership</h3>
-        <div class="skills-grid">
-          <span>Client Demos & BAT Facilitation</span>
-          <span>Mentoring / TA Support</span>
-          <span>Ownership & Adaptability</span>
+      <article class="skills-card">
+        <h3 class="skills-card-title">Interpersonal &amp; Leadership</h3>
+        <div class="skills-pill-group">
+          <span class="skill-pill">Client Demos &amp; BAT Facilitation</span>
+          <span class="skill-pill">Mentoring / TA Support</span>
+          <span class="skill-pill">Ownership &amp; Adaptability</span>
         </div>
-      </div>
-
+      </article>
     </div>
   </section>
 
   <div class="section-divider"></div>
 
-  <!-- Projects Section -->
+  <!-- Projects Section
   <section id="projects" class="section">
     <h2>Featured Projects</h2>
     <div class="project-grid">
@@ -182,8 +202,66 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+<!-- /-------------------------------------------->
+<!-- <img src="assets/Insta.jpg" alt="Instagram" /> -->
 
+<!-- Projects Section -->
+<section id="projects" class="section">
+    <h2>Featured Projects</h2>
+
+    <div class="projects-grid">
+      <!-- Project 1 -->
+      <div class="project-card">
+        <img src="assets/Proj1_image.jpg" alt="IT E-Commerce Sales Dashboard" />
+        <div class="project-content">
+          <h3>IT E-Commerce Sales Dashboard</h3>
+          <p>A Power BI-driven sales dashboard analyzing nationwide revenue, service KPIs, and regional performance trends for an online retail store.</p>
+          <p class="tech">Power BI | Data Visualization | Analytics</p>
+          <a href="#" target="_blank" class="github-link">View on GitHub</a>
+        </div>
+      </div>
+  
+      <!-- Project 2 -->
+      <div class="project-card">
+        <img src="assets/Proj2.png.avif" alt="MERN Stack Web Application" />
+        <div class="project-content">
+          <h3>MERN Stack Web Application</h3>
+          <p>A full-stack web app built with the MERN stack to demonstrate clean CRUD operations and automated deployment through GitHub Actions.</p>
+          <p class="tech">MongoDB | Express | React | Node.js</p>
+          <a href="#" target="_blank" class="github-link">View on GitHub</a>
+        </div>
+      </div>
+  
+      <!-- Project 3 -->
+      <div class="project-card">
+        <img src="assets/6028802_ff48_3.webp" alt="CourseMind" />
+        <div class="project-content">
+          <h3>CourseMind</h3>
+          <p>A Next.js- and FastAPI-powered academic assistant that helps professors plan courses, track quizzes, and analyze student performance using AI insights.</p>
+          <p class="tech">Next.js | FastAPI | MongoDB | Node.js</p>
+          <a href="#" target="_blank" class="github-link">View on GitHub</a>
+        </div>
+      </div>
+  
+      <!-- Project 4 -->
+      <div class="project-card">
+        <img src="assets/Proj4.jpg.webp" alt="Jirrassic Application" />
+        <div class="project-content">
+          <h3>Jirrassic Application (AI Hackathon Project)</h3>
+          <p>An AI-powered task automation tool using Whisper and Vertex AI to convert meeting transcripts into actionable tasks, improving workflow automation.</p>
+          <p class="tech">Vertex AI | Python | FastAPI | MongoDB</p>
+          <a href="#" target="_blank" class="github-link">View on GitHub</a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="view-more">
+      <a href="projects.html" class="view-more-btn">View More Projects →</a>
+    </div>
+  </section>  
+
+  
   <div class="section-divider"></div>
 
   <!-- Contact Section -->
